<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="1dp">
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/item_article_image"
        app:layout_constraintBottom_toBottomOf="@id/item_article_image"
        app:layout_constraintStart_toStartOf="@id/item_article_image"
        app:layout_constraintEnd_toEndOf="@id/item_article_image"
        />
    <ImageView
    android:id="@+id/item_article_image"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
        android:id="@+id/item_article_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/item_article_image"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="6dp"
        android:text="@string/reuters_editorial"
        />
    <TextView
        android:id="@+id/item_article_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/item_article_author"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="6dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/crypto_weekly_something_in_the_ether_reuters"
        />
    <TextView
        android:id="@+id/item_article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/item_article_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="6dp"
        android:text="@string/_2022_09_13t17_25_35z"
        />


</androidx.constraintlayout.widget.ConstraintLayout>